--- a/style2.css
+++ b/style2.css
@@ -88,24 +88,30 @@ body{
 /* Writer, date and share */
 .text-contain__info-contain{
     display: flex;
-/*     background-color: indigo;
- */    flex-wrap: nowrap;
+    background-color: var(--Very-Dark-Graayish-Blue);
+    flex-wrap: nowrap;
     flex-direction: row;
     align-items: center;
-    max-height: 20%;
+    height: 20%;
     justify-content: space-between;
     
-    margin: 1em 1.5em;
-
+/*     margin: 1em 1.5em;
+ */
+    border-radius: 0 0 1em 1em;
 }
 /* Pic Name date */
 .info-contain__author{
 /*     background-color: lightcoral;
- */    height: 100%;
+ */ 
+    height: 100%;
     display:flex;
-    width: 80%;
-    
+    width: max-content;
+
 }
+.no-display{
+    display:none;
+}
+
 .info-contain__author-avatar{
     clip-path: circle(50% at 50% 50%);
     height: 100%;
@@ -142,9 +148,19 @@ body{
 .info-contain__share-contain{
 /*     margin-left: auto;
  */
-    position: relative;
-
+    background-color: red;
+/*     position: relative;
+ */
+    display: flex;
+    justify-content: flex-end;
+/*     flex-grow: 1;
+    flex-basis: auto; */
+    flex: 1 0 auto;
 }
+.info-contain__share-contain.no-display{
+    background-color: yellowgreen;
+}
+
 .social-media__share-text{
     font-family: 'Manrope', sans-serif;
     font-weight: 500;
@@ -154,10 +170,11 @@ body{
 }
 .share-contain__share-btnContain{
     border-radius: 50%;
-    background-color: var(--Light-Grayish-Blue);
+    background-color: springgreen;
     padding: 6px;
-
+    margin-left: 0;
 }
+
 .share-contain__share-btnContain:hover,
 .share-contain__share-btnContain:active,
 .share-active{
@@ -168,33 +185,27 @@ body{
 .share-active>img{
     filter: brightness(2);
 }
-
+.share-contain__share-btnContain>img{
+    background-color: yellow;
+}
 .share-contain__social-media{
     background-color: var(--Very-Dark-Graayish-Blue);
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    padding: 0.75em 1.5em;
-    border-radius: 1em;
+/*     padding: 0.75em 1.5em;
+    border-radius: 1em; */
     justify-content: space-around;
     align-items: center;
     width: 12em;
-    position: absolute;
-    left: -6.75em;
-    bottom: 2.5em;
+/*     position: absolute;
+ */   /*  left: -6.75em;
+    bottom: 2.5em; */
     filter:opacity(1);
     display: none;
-
 }
 
-.share-contain__social-media::after{
-    content: "";
-    position: absolute;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    border-top: 10px solid var(--Very-Dark-Graayish-Blue); 
-    top: 2.7em;
-}
+
 
 
 @media screen and (min-width:1000px){
@@ -233,6 +244,38 @@ body{
 /*         background-color: saddlebrown;
  */        justify-content: space-evenly;
         
+    }
+    .share-contain__social-media{
+        background-color: var(--Very-Dark-Graayish-Blue);
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        padding: 0.75em 1.5em;
+        border-radius: 1em;
+        justify-content: space-around;
+        align-items: center;
+        width: 12em;
+        position: absolute;
+        left: -6.75em;
+        bottom: 2.5em;
+        filter:opacity(1);
+        display: none;
+    }
+
+    .share-contain__social-media::after{
+        content: "";
+        position: absolute;
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+        border-top: 10px solid var(--Very-Dark-Graayish-Blue); 
+        top: 2.7em;
+    }
+    .info-contain__share-contain{
+    /*     margin-left: auto;
+    */
+        background-color: red;
+        position: relative;
+        display: block;
     }
     .description-contain__tittle{
         font-size: 23px;
